# speech_synthesis

google_speech_synthesis/: CMakeLists.txt  README.md  package.xml  setup.py
google_speech_synthesis/src/: main.py
speech_recognition/: CMakeLists.txt  package.xml
speech_synthesis/: CMakeLists.txt  package.xml
