<?xml version="1.0"?>
<package>
  <name>speech_synthesis</name>
  <version>0.0.0</version>
  <description>The speech_synthesis package</description>

  <maintainer email="janne.spijkervet@hotmail.com">Janne Spijkervet</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend></run_depend>
  <export>
      <metapackage/>
  </export>
</package>
